# Hackstreet-Bois

./: .gitignore  ALGORITHM_EXPLAINED.md  AUTOMATIC_MATCHING_GUIDE.md  BACKEND_IMPLEMENTATION_GUIDE.md  FEATURES.md  FRONTEND_IMPLEMENTATION_SUMMARY_V2.md  INTEGRATION_CHECKLIST.md  LEARNING_MATERIALS_INTEGRATION.md  PEER_MATCHING_COMMUNICATION_FEATURES.md  PEER_MATCHING_GUIDE.md  PEER_MATCHING_QUICK_START.md  PEER_MATCHING_README.md  PEER_MATCHING_SUMMARY.md  PROJECT_CHANGES_SUMMARY.md  QUICKSTART.md  QUICK_START_GUIDE.md  RAG_INTEGRATION_GUIDE.md  RAG_QUICKSTART.md  README.md  SYSTEM_ARCHITECTURE.md  learning_materials_final_20251225_160355.json
backend/: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  EVALUATION_SYSTEM_EXPLAINED.md  IMPLEMENTATION.md  Makefile  README.md  SETUP.md  check_db.py  check_matching.py  check_user_data.py  check_weaknesses.py  detect_db.py  docker-compose.prod.yml  docker-compose.yml  downgrade_fit_to_teach.py  fix_fit_to_teach.py  force_update_performance.py  init_db.py  main.py  migrate_db.py  nginx.conf  package.json  populate_performance.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_db.py  start.py  test_subject_match.py
backend/app/: __init__.py
backend/app/api/: api.py  deps.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  init_db.py  seed.py
backend/app/models/: __init__.py  assessment.py  learning_material.py  matching.py  progress.py  resource.py  school.py  user.py
backend/app/schemas/: assessment.py  learning_material.py  matching.py  progress.py  resource.py  school.py  user.py
backend/app/services/: Learning_materials.py  evaluation_service.py  matching_service.py  metadata.jsonl  rag_service.py
backend/app/utils/: __init__.py
backend/assessments/1/: 015329e4-bf22-43a2-9cb5-cc15351b5b85.json  1542d8c9-a064-41bb-9f3f-eaaae8d4051d.json  1542d8c9-a064-41bb-9f3f-eaaae8d4051d_evaluation.json  3d4ad482-7bf9-4a23-a2db-69048b409818.json  5dbd7e35-9220-4aa4-841b-76500cb55207.json  5dbd7e35-9220-4aa4-841b-76500cb55207_evaluation.json  Assessment_Evaluation.json  Evaluator.py  MathAssesment.json  bda43c1c-6fb4-4189-9c1b-a39306ca4cbe.json  bda43c1c-6fb4-4189-9c1b-a39306ca4cbe_evaluation.json  c1aa5579-5cde-43c5-a234-328c4ea04e3b.json  c1aa5579-5cde-43c5-a234-328c4ea04e3b_evaluation.json  cb015568-bac9-4d52-9f9c-e4d42275fee3.json  cb015568-bac9-4d52-9f9c-e4d42275fee3_evaluation.json  d26cc631-cbba-46cd-ab54-feffe4a5a5b5.json  ec25fdd2-5bda-46fb-8c8c-d6c1b10e89fe.json  f53c2097-083b-4645-a1b5-28d03db81c1b.json  f53c2097-083b-4645-a1b5-28d03db81c1b_evaluation.json
backend/assessments/3/: 4adc0ae5-ff16-4906-8574-49ae0fb16765.json  4adc0ae5-ff16-4906-8574-49ae0fb16765_evaluation.json  6994ab4c-1e50-48f5-ae70-8552d096b4dc.json  6994ab4c-1e50-48f5-ae70-8552d096b4dc_evaluation.json  a1fada76-2cee-4ced-bce8-edd9b5976618.json  (+1 more)
backend/migrations/: add_communication_features.py  add_learning_materials.py  add_meeting_types_and_location.py  add_peer_matching.py
backend/script/: backup-db.sh  clean.sh  create-admin.sh  db-reset.sh  dev.sh  doctor.sh  generate-migration.sh  init-db.sql  logs.sh  quick-setup.sh  restore-db.sh  setup.sh  test.sh
backend/tests/: test_auth.py
(+127 files in other folders)
